deploy/manifests/deployment-sandbox-demo.yaml
# Source: basic-demo/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sandbox-demo
  namespace: basic-demo
  labels:
    app.kubernetes.io/name: basic-demo
    backstage.io/kubernetes-id: sandbox-demo
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: basic-demo
      app.kubernetes.io/instance: demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: basic-demo
        app.kubernetes.io/instance: demo
        backstage.io/kubernetes-id: sandbox-demo
    spec:
      nodeSelector:
        topology.kubernetes.io/zone: us-west-2a
        karpenter.sh/capacity-type: spot
        karpenter.k8s.aws/instance-family: m5a
        karpenter.k8s.aws/instance-size: large
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: fargle
          whenUnsatisfiable: ScheduleAnyway
      containers:
        - name: basic-demo
          image: "quay.io/fairwinds/docker-demo:1.2.0"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          securityContext:
            runAsUser: 1200
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: 500m
              memory: 200Mi
            requests:
              cpu: 500m
              memory: 200Mi
