deploy/manifests/service-demo-basic-demo.yaml
# Source: basic-demo/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sandbox-demo
  namespace: basic-demo
  labels:
    app.kubernetes.io/name: basic-demo
    backstage.io/kubernetes-id: sandbox-demo
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: basic-demo
    app.kubernetes.io/instance: demo
